# auth-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pre-commit.yaml  pyproject.toml  ruff.toml  test.py  ts.py
app/adapters/broker/: config.py  interfaces.py  main.py  message.py  repositories.py
app/adapters/event_bus/: event_bus_repository.py
app/adapters/event_sourcing/: event_bus.py  event_handler.py  event_projector.py
app/adapters/events/: converters.py  event_mediator.py  event_observer.py  mediator_interface.py  observer_interface.py
app/adapters/message_broker/: event_bus.py  main.py
app/application/: data_mapper.py  event_bus.py  exception.py  handlers.py  registry.py  unit_of_work.py
app/application/base/: base_command.py  base_command_handler.py  base_dto.py  base_exception.py  base_mediator.py  base_query.py  base_query_handler.py  command_handler.py  event_bus.py  event_bus_interface.py  event_handler.py  event_handler_Interface.py  event_handlers.py  event_publisher_interface.py  event_queue.py  event_store.py  event_store_interface.py  exception.py  integration_event.py  (+4 more)
app/domain/: agregate_root.py  domain_event.py  exception.py  unit_of_work.py  uowed.py
app/entrypoint/: main.py
app/main/: main.py
app/presentation/: main.py
docs/: README.md
grafana/datasources/: loki.yaml  prometheus.yaml
prometheus/: prometheus-config.yaml
promtail/: promtail-config.yaml
scripts/: entrypoint.sh  fastapi_application.sh  faststream_application.sh  run_migrations.sh
tests/domain/: test_user_entity.py
(+648 files in other folders)
