[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["NxtaSunstrike <unixalle765@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
motor = "^3.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
faststream = "^0.5.31"
dishka = "^1.4.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
aiokafka = "^0.12.0"
aio-pika = "^9.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
